crates/datarig-tui/tests/snapshots/ui_snapshots__settings_theme_preview_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ×                                                                                                          "
"│  ＋ New connection          ╭ Settings ────────────────────────────────────────────────────────────────────────────────────────╮─────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●  local-pg               │                                                                                                  │ Space c s switch connection │"
"│  ▾  datarig default        │ Display                                                                                          │                             │"
"│    ▸ 󱋣 analytics            │   Nerd Font icons                   ‹ on        ›  Nerd Font icons → on                          │                             │"
"│    ▸ 󱋣 public               │   Command line position             ‹ popup     ›  A popup near the top of the screen            │                             │"
"│    ▸ 󱋣 shop                 │   Theme                             ‹ dark      ›  Dark, truecolor                               │                             │"
"│                             │ Editor                                                                                           │                             │"
"│                             │   Cursor shape                      ‹ on        ›  By mode (block or bar)                        │                             │"
"│                             │   Yanks to the clipboard            ‹ on        ›  Yes, as Vim with clipboard=unnamedplus        │                             │"
"│                             │   Formatter: keywords               ‹ preserve  ›  As written                                    │                             │"
"│                             │   Formatter: indent                 ‹ 4         ›  4 spaces                                      │                             │"
"│                             │   Auto-pairs                        ‹ off       ›  Off, every key types itself                   │                             │"
"│                             │   Run hints                         ‹ on        ›  On, the outcome after each statement run      │                             │"
"│                             │ Results                                                                                          │                             │"
"│                             │   Cell detail                       ‹ panel     ›  A panel on the right of the results           │                             │"
"│                             │ Clipboard                                                                                        │                             │"
"│                             │   Clipboard                         ‹ auto      ›  Automatic: OSC 52 over SSH, else the system … │                             │"
"│                             │   Column names in copies            ‹ auto      ›  When more than one row is copied              │                             │"
"│                             │ Language                                                                                         │                             │"
"│                             │   UI language                       ‹ en        ›  Change language → English                     │                             │"
"│                             │ Secrets                                                                                          │                             │"
"│                             │   Password storage of new profiles  ‹ auto      ›  New profiles' password → auto (keychain when… │                             │"
"│                             │──────────────────────────────────────────────────────────────────────────────────────────────────│                             │"
"│                             │ Previewing dark: Enter keeps it, Esc goes back to terminal                                       │                             │"
"│                             │ Terminal background: not detected (catppuccin, tokyo-night and gruvbox use their dark variant)   │                             │"
"│                             │ The colors of the whole UI. terminal uses your terminal's own colors. catppuccin, tokyo-night    │                             │"
"│                             │ and gruvbox follow the terminal's background (light or dark); a variant name such as             │                             │"
"│                             │ gruvbox-light pins one. Your own themes: themes/<name>.toml next to the config file.             │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             ╰─────────────────────────────────────────────────────────────── j/k move · h/l change · Esc close ╯                             │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                                                                                                  EN "
