crates/datarig-tui/tests/snapshots/ui_snapshots__settings_theme_preview_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│ ╭ Settings ────────────────────────────────────────────────────────────────╮─╮"
"│▾│ Display                                                                  │ │"
"│ │   Nerd Font icons           ‹ on        ›  Nerd Font icons → on          │e│"
"│ │   Command line position     ‹ popup     ›  A popup near the top of the … │ │"
"│ │   Theme                     ‹ dark      ›  Dark, truecolor               │ │"
"│ │ Editor                                                                   │ │"
"│ │   Cursor shape              ‹ on        ›  By mode (block or bar)        │ │"
"│ │   Yanks to the clipboard    ‹ on        ›  Yes, as Vim with clipboard=u… │ │"
"│ │   Formatter: keywords       ‹ preserve  ›  As written                    │ │"
"│ │   Formatter: indent         ‹ 4         ›  4 spaces                      │ │"
"│ │   Auto-pairs                ‹ off       ›  Off, every key types itself   │ │"
"│ │ Results                                                                  │ │"
"│ │   Cell detail               ‹ panel     ›  A panel on the right of the … │t│"
"│ │ Clipboard                                                                │ │"
"│ │   Clipboard                 ‹ auto      ›  Automatic: OSC 52 over SSH, … │ │"
"│ │   Column names in copies    ‹ auto      ›  When more than one row is co… │ │"
"│ │ Language                                                                 │t│"
"│ │   UI language               ‹ en        ›  Change language → English     │ │"
"│ │ Secrets                                                                  │ │"
"│ │   Password storage of new…  ‹ auto      ›  New profiles' password → aut… │ │"
"│ ╰─────────────────────────────────────── j/k move · h/l change · Esc close ╯ │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
