crates/datarig-tui/tests/snapshots/ui_snapshots__source_change_remove_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾╭ Edit connection — local-pg ──────────────────────────────────────────────╮t│"
"│ │  Basic   SSH   Advanced                            Ctrl+N/Ctrl+P section │e│"
"│ │                                                                          │ │"
"│ │ Driver            ‹PostgreSQL› MySQL  Redis  Elasticsearch   unsupported │ │"
"│ │ Name              local-pg                                               │ │"
"│▸│ Host              127.0.0.1                                              │ │"
"│▸│ Port  ╭ Password storage ────────────────────────────────────────╮       │ │"
"│ │ User  │                                                          │       │ │"
"│ │ Passwo│ Switch “local-pg” to the prompt on every connect? Its    │ge     │ │"
"│ │ Passwo│ saved password is removed from the OS keychain.          │       │ │"
"│ │ Databa│                                                          │       │ │"
"│ │       │                [ Cancel ]     Continue                   │       │t│"
"│ │ DSN   ╰───────────────────────────── y continue · n/Enter cancel ╯de=dis │ │"
"│ │                                                                          │ │"
"│ │                                                                          │ │"
"│ │                    Test    Save    Cancel                                │t│"
"│ │                                                                          │ │"
"│ │                                                                          │ │"
"│ ╰─ Tab/↑↓ move · Ctrl+N/P section · Ctrl+T test · Ctrl+S save · Esc cancel ╯ │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
