crates/datarig-tui/tests/snapshots/ui_snapshots__tab_bar_with_icons_and_many_tabs.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: out
---
icons 80: ╭ Explorer ────────────╮ ⠋ console 1 ◆ ×  2 console 2 ×  3 console 3 ! ×        
last 80: ╭ Explorer ────────────╮‹ 11 conso… ×  12 conso… ×  13 conso… ×  14 conso… ×    
last 160: ╭ Explorer ────────────────────────────╮‹ 6 conso… ×  7 conso… ×  8 conso… ×  9 conso… ×  10 conso… ×  11 conso… ×  12 conso… ×  13 conso… ×  14 conso… ×       
middle 80: ╭ Explorer ────────────╮‹ 6 conso… ×  7 conso… ×  8 conso… ×  9 conso… ×       ›
middle 160: ╭ Explorer ────────────────────────────╮‹ 3 conso… ! ×  4 conso… ×  5 conso… ×  6 conso… ×  7 conso… ×  8 conso… ×  9 conso… ×  10 conso… ×  11 conso… ×       ›
first 80: ╭ Explorer ────────────╮ ⠋ conso… ◆ ×  2 conso… ×  3 conso… ! ×  4 conso… ×    ›
first 160: ╭ Explorer ────────────────────────────╮ ⠋ conso… ◆ ×  2 conso… ×  3 conso… ! ×  4 conso… ×  5 conso… ×  6 conso… ×  7 conso… ×  8 conso… ×  9 conso… ×        ›
