crates/datarig-tui/tests/snapshots/ui_snapshots__test_connection_ok_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ○ ×                                        "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾╭ Edit connection — local-pg ──────────────────────────────────────────────╮t│"
"│ │  Basic   SSH   Advanced                            Ctrl+N/Ctrl+P section │e│"
"│ │                                                                          │ │"
"│ │ Driver            ‹PostgreSQL› MySQL  Redis  Elasticsearch   unsupported │ │"
"│ │ Name              local-pg                                               │ │"
"│▸│ Host              127.0.0.1                                              │ │"
"│▸│ Port              55432                                                  │ │"
"│ │ User              datarig                                                │ │"
"│ │ Password storage  ‹Keychain› File  Command  Env  Prompt   ←/→ change     │ │"
"│ │ Password          •••••••                   kept in the OS keychain      │ │"
"│ │ Database          datarig                                                │ │"
"│ │                                                                          │t│"
"│ │ DSN               postgres://datarig@127.0.0.1:55432/datarig?sslmode=dis │ │"
"│ │                                                                          │ │"
"│ │                                                                          │ │"
"│ │                    Test    Save    Cancel                                │t│"
"│ │ Connection OK · server 17.2 · 12ms                                       │ │"
"│ │                                                                          │ │"
"│ ╰─ Tab/↑↓ move · Ctrl+N/P section · Ctrl+T test · Ctrl+S save · Esc cancel ╯ │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
