crates/datarig-tui/tests/snapshots/ui_snapshots__too_small_terminal.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: "h.draw(79, 24).backend()"
---
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                           80×24 or larger required                            "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
