crates/datarig-tui/tests/snapshots/ui_snapshots__tree_lazy_load_and_open_table.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: "h.draw(120, 30).backend()"
---
"╭ Explorer ──────────────────╮ 1 console 1 ○ ×                                                                          "
"│  ＋ New connection         │╭ Query · console 1 ─────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg              ││ local-pg / datarig  127.0.0.1:55432 · policy: default      Space c s switch connection │"
"│  ▾ datarig default         ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                           │" Hidden by multi-width symbols: [(47, " ")]
"│    ▸ analytics             ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                             │"
"│    ▸ public                ││  3                                                                                     │"
"│    ▾ shop                  ││  4 SELECT u.name, o.status, o.total_amount                                             │"
"│      ▾ Tables              ││  5 FROM shop.orders o                                                                  │"
"│        ▸ audit_log         ││  6 JOIN shop.users u ON u.id = o.user_id                                               │"
"│        ▸ order_items       ││  7 WHERE o.status = 'paid';                                                            │"
"│        ▸ orders            ││  8                                                                                     │"
"│        ▸ products          ││  9 SELECT * FROM analytics.events;                                                     │"
"│        ▸ reviews           ││ 10                                                                                     │"
"│        ▸ users             ││ 11 SELECT * FROM analytics.events ORDER BY created_at DESC;                            │"
"│      ▾ Views               ││ 12                                                                                     │"
"│        ▸ order_summary     ││ 13 SELECT analytics.slow(30);                                                          │"
"│                            ││ 14                                                                                     │"
"│                            ││ 15 SELECT $$a body; with a semicolon$$ AS dollar, 'it''s; fine' AS quoted;             │"
"│                            ││ 16                                                                                     │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"│                            ││                                                                                        │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg      │ Enter open · Tab next pane · : commands · F1 help EN "
